tests/NormalTests/paczka1/fuzzy1/81276633.err
Error in line 6: MA7eJG3IE S29 18,3
Error in line 7: MA7eJG3IE S806 42,8
Error in line 12: tixTrDESG4 S806 36,1
Error in line 15: tixTrDESG4 S881 0,5
Error in line 8: MA7eJG3IE S881 40,8
Error in line 31: xCsczOE S806 25,1
Error in line 34: xCsczOE S870 84,1
